<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" 
    >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:layout_marginRight="@dimen/verification_padding"
            android:layout_marginLeft="@dimen/verification_padding" >
            
			<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:text="@string/auth_msg"
                android:textSize="@dimen/verification_lable"
                android:textColor="#ff333333"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                
                android:background="@drawable/bg_form" 
                />
            
            <EditText
                android:id="@+id/auth_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_hint"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1"
                android:layout_marginTop="10dp"
                android:singleLine="true" />
            
            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="25dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_activate" />
            
            <Button
                android:id="@+id/resend_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_resend_activation" />
            
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:gravity="right"
                android:layout_gravity="right">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:text="@string/rerigister_text"
                    android:textSize="@dimen/verification_desc_font_size"
                    />
                <TextView android:id="@+id/btn_re_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rerigister"
                    android:textColor="#3333bb"
                    android:textSize="@dimen/verification_desc_font_size"/>
                
            </LinearLayout>
            
        </LinearLayout>
    </ScrollView>

</merge>